@@ -9,33 +9,11 @@ public class Main {
 
         //Load Movie Database (MovieDB is an Arraylist of Movie Objects)
         Menu.menuLog();
-
-        System.out.println("1. Log in");
-        System.out.println("2. Create account");
-        Account newAcc = new Account();
-        Pair<Boolean, Integer> logInfo;
-        //Index in ArrayList of user who is using the system
-        int inSystem;
-        boolean creatingAccount = true;
-        while (creatingAccount == true) {
-            Scanner menuScan = new Scanner(System.in);
-            int input = menuScan.nextInt();
-            if (input == 1)
-            {
-                logInfo = Account.logIn();
-                creatingAccount = logInfo.getFirst();
-                inSystem = logInfo.getSecond();
-                System.out.println("Logged in successfully");
-            } else if (input == 2)
-            {
-                logInfo = Account.creatingUser();
-                creatingAccount = logInfo.getFirst();
-                inSystem = logInfo.getSecond();
-                System.out.println("Account created");
-            } else
-            {
-                System.out.println("This option is not on menu, try again");
-            }
-        }
+        ArrayList<Movie> movDB = new ArrayList<>();
+        System.out.println(MovieDB.ReadDB().get(0).toString());
+        //MovieDB.deleteMovieFromDB();//deletes movie from DB asking for movie ID
+        MovieDB.CreateMovie();
+        MovieDB.UpdateMovie();
+        FindMovie.Find();
     }
 }
